Kubernetes/student-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
  namespace: student
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - name: springboot
          image: ganesh1326/student:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springboot
spec:
  type: NodePort
  selector:
    app: springboot
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
