Kubernetes/ingress_for_application.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
     cert-manager.io/issuer: "letsencrypt-prod"  # Should match the name of your ClusterIssuer
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx  #this matches the class name of your Ingress Controller
  tls:
  - hosts:
    - student.ganeshpawar.one
    secretName: tls-secret
    rules:
    - host: student.ganeshpawar.one
      http:
        paths:
          - path: /students
            pathType: Prefix
            backend:
              service:
                name: springboot
                port:
                  number: 8080
